Updated IDs and Class names for Sprites section, updated margin/padding in multiple sections to fix alignment, updated text color with info being pulled from the API in red

--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -3,10 +3,8 @@
   /* Colors ((Pallet?)) */
 :root {
     --primary: rgb(18, 20, 23);
-    --secondary: pink;
-    --tertiary: rgba(49, 52, 61, 1);
-    --dark: rgba(28, 29, 33, 1);
     --light: rgba(238, 238, 247, 1);
+    --blue: rgb(13, 0, 255);
   }
 
 #button {
@@ -44,7 +42,7 @@ img {
 
 .p {
     border-radius: 2px;
-    border-color: blue;
+    border-color: var(--blue);
 }
 
 
@@ -59,74 +57,75 @@ img {
     flex-direction: column;
 }
 
-.sprites {
-  margin: auto;
-  align-items: center;
-}
-
 .sprite {
   text-align: center;
 }
 
-#top1a {
-    
-    margin: 5px 1px;
-    background-color: white;
-    border: 3px solid blue;
-    height: auto;
-    width: auto;
+.subtitle {
+  margin: 0 0 1% -.5%; 
 }
 
+.desc {
+  color: rgb(255, 61, 61);
+  margin: 0;
+  padding-left: 0.5%;
+}
+
+.spritesContainer {
+  background-color: white;
+  border: 3px solid var(--blue);
+  height: auto;
+  width: 100%;
+  background-blend-mode: hard-light;
+  padding: 3px;
+  margin: auto;
+  align-items: center;
+}
+
+.dexNumContainer {
+  display: flex;
+  flex-direction: row;
+  margin-left: -8px;
+  border: 3px solid var(--blue);
+  height: auto;
+  width: auto;
+  background-blend-mode: hard-light;
+  padding: 3px;
+}
+
+.typesContainer {
+  display: flex;
+  flex-direction: row;
+  margin-top: 4px;
+  margin-left: -8px;
+  background-color: white;
+  border: 3px solid var(--blue);
+  height: auto;
+  width: auto;
+  background-blend-mode: hard-light;
+  padding: 3px;
+}
+
+.poGoContainer {
+  border: 3px solid var(--blue);
+  margin-top: 4px;
+  margin-left: -8px;
+  height: auto;
+  width: auto;
+}
 
 #top1 {
- 
-    background-color: white;
-    border: 5px solid red;
-    height: auto;
-    width: 100%;
-    padding-top: 8px;
-    margin: 5px 1px;
-    text-align: center;
-}
-
-#top2 {
-    display: flex;
-    flex-direction: row;
-    margin: 5px 1px;
-    background-color: white;
-    border: 3px solid blue;
-    height: auto;
-    width: auto;
-    background-blend-mode: hard-light;
-    padding: 3px;
- }
-
-
-#top3 {
-    display: flex;
-    flex-direction: row;
-    margin: 5px 1px;
-    background-color: white;
-    border: 3px solid blue;
-    height: auto;
-    width: auto;
-    background-blend-mode: hard-light;
-    padding: 3px;
-}
-
-#mid1 {
-    background-color: white;
-    border: 3px solid blue;
-    height: auto;
-    width: 100%;
-    background-blend-mode: hard-light;
-    padding: 3px;
-    margin-top: 3px;
+  border: 5px solid red;
+  height: auto;
+  width: 100%;
+  padding-top: 8px;
+  margin: 5px 1px;
+  text-align: center;
 }
 
 #mid2 {
     background-color: white;
-    border: 3px solid blue;
+    border: 3px solid var(--blue);
     height: auto;
     width: 100%;
     background-blend-mode: hard-light;
@@ -137,7 +136,7 @@ img {
 
 #bottom1 {
     background-color: white;
-    border: 3px solid blue;
+    border: 3px solid var(--blue);
     flex-wrap: wrap;
     height: auto;
     width: 100%;
